Save the current work

--- a/Style_Guide_Template/css/main.css
+++ b/Style_Guide_Template/css/main.css
@@ -1,36 +1,146 @@
-/*
-  STYLE GUIDE STYLING 
-  Default styling for the style guide 
-*/
+*{
+  box-sizing: border-box;
+}
 body {
-  font-family: sans-serif;
-  padding: 2rem;
+  font-family: 'Arimo';
+  padding: 1rem;
+  font-size: 1rem;
+  background-color:#f9813a;
 }
 
-section:not([id]) {
+h1,h2,h3,h4{
+  font-family: 'Playfair Display';
+  
+}
+
+h1{
+  font-size: 2.25rem;
+
+}
+h2{
+  font-size: 1.8rem;
+}
+h3{
+  font-size: 1.3rem;
+}
+h4{
+  font-size: 1.1rem;
+}
+
+/*section:not([id]) {
   margin: 1em 0;
   padding: 0.5em 0;
   border-top: 1px solid #333;
-}
-
-section h3 {
-  margin-bottom: 0;
-}
+}*/
 
 section p {
   margin-top: 0;
+  text-height:1.5em;
+}
+.title{
+  color: white;
+  text-align: center;
+}
+.code-box{
+  background-color: #fcf1f1;
+  border-radius: 1rem;
+}
+.container{
+  padding: 1em;
+  border-radius: 0.5em;
+  margin-bottom: 1rem;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
 
-section code {
-  background-color: #EEE;
-  padding: 0.5em 0.75em;
+.container>h1 h2 h3 h4 p{
+  color: rgb(26,28,32);
 }
 
+/*Flex box*/
+.flex-container{
+  display: flex;
+  flex-wrap: wrap;
+  border: 1px solid black;
+
+}
+.flex-container>div{
+  width: 45%;
+  border: 1px solid black;
+  margin-right: 1.5em;
+  padding: 1rem;
+}
+.flex-container>h2{
+  width: 100vw;
+  border: 1px solid black;
+}
 
 /* 
   INTERACTIVE ELEMENTS -------------------
 */
+.in-text-link{
+  color: #f9813a;
+}
+.in-text-link:hover{
+  color: white;
+  background-color:#f9813a; 
+  text-decoration: none;
+}
 
+/*buttons*/
+.btns{
+  display: flex;
+  flex-wrap: wrap;
+}
+.btns>div{
+  width: 45%;
+  margin: auto;
+}
+.btn {
+    border: none;
+    color: white;
+    padding: 10px 57px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+}
+.btn-1{
+  
+  background-color:#f9813a;
+  color: white;
+}
+.btn-2{
+  background-color: #1a1c20;
+  color: white;
+}
+.btn-2:hover,
+.btn-2:focus {
+    background-color: white;
+    border: 2px solid black;
+    color: black;
+    transition: 0.3s;
+}
+.btn-1:hover,
+.btn-1:focus {
+    background-color: white;
+    border: 2px solid #f9813a;
+    color: #f9813a;
+    transition: 0.3s;
+}
+
+/*text input*/
+input[type=text] {
+  width: 30%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid #f9813a;
+  border-radius: 4px;
+}
+
+input[type=text]:focus{
+  width: 40%;
+}
 /* Styling for the navigation button */
 .button-nav {
   display: inline-block;
@@ -59,3 +169,28 @@ section code {
 /* 
   COMBINED ELEMENTS -------------------
 */
+.main-nav{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+.main-nav>li{
+  float: right;
+}
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #4CAF50;
+}
