Update initial web page

--- a/Style_Guide_Template/css/main.css
+++ b/Style_Guide_Template/css/main.css
@@ -65,7 +65,7 @@ section p {
 .container{
   padding: 1em;
   border-radius: 0.5em;
-  margin-bottom: 3rem;
+  /*margin-bottom: 3rem;*/
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
