--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,21 @@
 	font-size: 7em;
 	color: white;
 }
-h2{
+
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+      margin:0;
+    padding:0;  
+}
+
+body{
+  font-family: 'Arimo';  
+  background-color:#f9813a;
+  padding: 0;
+}
+
+h1{
 	color: white;
 }
 .flex-intro{
@@ -30,6 +44,7 @@ h2{
 body{
 	padding: 0;
 }
+
 .text-container{
 	width: 40%;
 	color: #f9813a;
@@ -39,4 +54,148 @@ body{
 	background-color: white;
 	border-radius: 2em;
 	padding: 0.9em;
+}
+
+.nav-container{
+	/*border: 1px black solid;*/
+}
+
+.main-nav {
+  list-style: none;
+  /*margin: 100px 0 0;*/
+  padding: 0;
+  overflow: hidden;
+  text-align: center;
+  /*border: 1px black solid;*/
+}
+
+.main-nav>li {
+  display: inline-block;
+  text-align: center;
+  overflow: hidden;
+  margin: 0 25px;
+  padding: 0;
+  /*border: 1px black solid;*/
+}
+
+.link {
+  display: block;
+  padding: 0 0 9px;
+  text-decoration: none;
+  position: relative;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 1;
+  font-weight: 900;
+}
+
+.link:after {
+    position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 3px;
+	background: #fff;
+	content: '';
+	-webkit-transition: -webkit-transform 0.35s;
+	transition: transform 0.35s;
+	-webkit-transform: translate3d(-100%,0,0);
+	transform: translate3d(-100%,0,0);
+}
+
+.link:hover:after,
+li.active .link:after {
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+	background: #ffd5cd;
+}
+
+.intro{
+	display: flex;
+	margin: auto;
+	border: 1px black solid;
+	
+	padding: 0;
+}
+.intro>h1{
+	margin: 0;
+	border: 1px black solid;
+}
+.a{
+	font-size: 6em;
+	width: 70vw;
+}
+.b{
+	font-size: 3em;
+	width: 40vw;
+}
+
+
+/*buttons*/
+.btns{
+  display: flex;
+  flex-wrap: wrap;
+}
+.btns>div{
+  width: 45%;
+  margin: auto;
+}
+.btn {
+    border: none;
+    color: white;
+    padding: 10px 57px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+}
+.btn-2{
+  background-color: #1a1c20;
+  color: white;
+}
+.btn-2:hover,
+.btn-2:focus {
+    background-color: white;
+    border: 2px solid black;
+    color: black;
+    transition: 0.3s;
+}
+
+
+.scroll-button {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background-color: #ffd5cd;
+  border-radius: 22.5px;
+  left: 50%;
+  margin-left: -22.5px;
+  z-index: 45;
+  cursor: pointer;
+  text-align: center;
+  font-size: 30px;
+  line-height: 47px;
+  color: #fff;
+ }
+
+.section2{
+  border: 1px solid black;
+  background-color: white;
+  width: 100vw;
+  height: 300px;
+  padding: 0;
+  margin-top: 10em;
+}
+.banner-bridge-center{
+  margin-top: 10em;
+}
+.section1{
+  border: 1px solid black;
+  /*background-color: white;*/
+  width: 100vw;
+  height: 700px;
+  padding: 0;
+  margin-top: 0em;
 }
