--- a/css/home.css
+++ b/css/home.css
@@ -1,10 +1,6 @@
 *{
 	box-sizing: border-box;
 }
-.intro{
-	font-size: 7em;
-	color: white;
-}
 
 html {
   box-sizing: border-box;
@@ -12,16 +8,16 @@ html {
       margin:0;
     padding:0;  
 }
-
+h1,h2,h3,h4{
+  font-family: 'Playfair Display';
+  
+}
 body{
   font-family: 'Arimo';  
   background-color:#f9813a;
   padding: 0;
 }
 
-h1{
-	color: white;
-}
 .flex-intro{
 	display: flex;
 	flex-wrap: wrap;
@@ -112,27 +108,53 @@ li.active .link:after {
 	transform: translate3d(0,0,0);
 	background: #ffd5cd;
 }
+.right-content{
+  text-align: left;
+  margin-left: 2em;
+  width: 45%;
+  font-size: 4em;
+  color: white;
+  text-align: justify;
+  align-self: center;
+  font-family: 'Playfair Display';
+}
+
+.left-content{
+  text-align: right;
+  width: 45%;
+  /*border: 1px black solid;*/
+}
+
+/*.right-content>div{
+  border: 1px black solid;
+}*/
+
+.left-content>div>h1{
+  padding: 0;
+  font-weight: 800;
+  font-size: 4em;
+  font-family: 'Playfair Display';
+  color: #1a1c20;
+}
+
+
+.flex-title{
+  display: flex;
+  /*flex-wrap: wrap;*/
+  /*border: 1px solid black;*/
+}
+
 
 .intro{
-	display: flex;
-	margin: auto;
-	border: 1px black solid;
-	
+	width: 100%;
 	padding: 0;
+  margin-right: 0;
+  /*border: 1px black solid;*/
+  /*font-size: 4em;*/
 }
 .intro>h1{
 	margin: 0;
-	border: 1px black solid;
 }
-.a{
-	font-size: 6em;
-	width: 70vw;
-}
-.b{
-	font-size: 3em;
-	width: 40vw;
-}
-
 
 /*buttons*/
 .btns{
@@ -171,6 +193,7 @@ li.active .link:after {
   background-color: #ffd5cd;
   border-radius: 22.5px;
   left: 50%;
+  bottom: 7%;
   margin-left: -22.5px;
   z-index: 45;
   cursor: pointer;
@@ -180,22 +203,97 @@ li.active .link:after {
   color: #fff;
  }
 
+.scroll-button:hover {
+  background-color: #1a1c20;
+  transition: 0.5s;
+ }
+
 .section2{
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   background-color: white;
-  width: 100vw;
+  max-width: 100vw;
   height: 300px;
-  padding: 0;
   margin-top: 10em;
+  margin: auto;
+  clear: both;
 }
+
 .banner-bridge-center{
   margin-top: 10em;
 }
+
 .section1{
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   /*background-color: white;*/
-  width: 100vw;
-  height: 700px;
+  width: 90vw;
+  min-height: 600px;
   padding: 0;
-  margin-top: 0em;
+  margin:auto;
+  margin-top: 1em;
+}
+
+@media only screen and (max-width: 840px) {
+  .left-content{
+      text-align: center;
+      width: 100%;
+      font-size: 12px;
+      line-height: 1;
+      /*border: 1px solid black;*/
+  }
+  .flex-title{
+    flex-direction: column;
+  }
+  .right-content{
+    display: flex;
+    width: 100%;
+    /*border: 1px solid black;*/
+    font-size: 20px;
+    line-height: 2;
+    text-align: center;
+    justify-content: center;
+    margin-left: 0;
+  }
+  .right-content>div:nth-of-type(1){
+      width: 20%;
+      /*border: 1px solid black;*/
+  }
+    .right-content>div:nth-of-type(2){
+      width: 30%;
+      /*border: 1px solid black;*/
+  }
+  .scroll-button{
+      top: 90%;
+  }
+}
+
+
+@media only screen and (max-width: 540px) {
+  .left-content{
+      text-align: center;
+      width: 100%;
+      font-size: 12px;
+      line-height: 1;
+     
+  }
+  .flex-title{
+    flex-direction: column;
+  }
+
+  .right-content{
+    display: flex;
+    width: 100%;
+    
+    font-size: 20px;
+    line-height: 2;
+    text-align: center;
+    justify-content: center;
+    margin-left: 2em;
+  }
+  .right-content>div:nth-of-type(1){
+      width: 20%;
+  }
+    .right-content>div:nth-of-type(2){
+      width:  100%;
+      
+  }
 }
