--- a/css/home.css
+++ b/css/home.css
@@ -209,10 +209,9 @@ li.active .link:after {
  }
 
 .section2{
-  /*border: 1px solid black;*/
   background-color: white;
   max-width: 100vw;
-  height: 300px;
+  min-height: 100vh;
   margin-top: 10em;
   margin: auto;
   clear: both;
@@ -226,11 +225,59 @@ li.active .link:after {
   /*border: 1px solid black;*/
   /*background-color: white;*/
   width: 90vw;
-  min-height: 600px;
+  min-height: 100vh;
   padding: 0;
   margin:auto;
   margin-top: 1em;
 }
+
+.txt{
+  font-weight: 900;
+  font-size: 36px;
+  color: #f9813a;
+  text-align: center;
+}
+
+.flex-about{
+  width: 100%;
+  height: 40vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  border: 1px solid black;
+}
+
+.flex-about>div:nth-of-type(1){
+  width: 30%;
+  height: 50%;
+  /*border: 1px solid black;*/
+  padding: 1em;
+  border: 1px solid black;
+  
+  /* border-radius: 0.5em;
+  margin-bottom: 3rem;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);*/
+}
+.flex-about>div:nth-of-type(1)>p{
+  line-height: 1.5;
+  color: #1a1c20;
+  margin-top: 3em;
+}
+.flex-about>div:nth-of-type(2){
+  width: 30%;
+  margin-left: 2em;
+  border: 1px solid black;
+  color: white;
+  height:100%;
+  background-color: #1a1c20;
+  /*border-radius: 0.5em;*/
+  padding: 1em;
+ /* margin-bottom: 3rem;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);*/
+}
+
 
 @media only screen and (max-width: 840px) {
   .left-content{
