--- a/css/home.css
+++ b/css/home.css
@@ -52,9 +52,6 @@ body{
 	padding: 0.9em;
 }
 
-.nav-container{
-	/*border: 1px black solid;*/
-}
 
 .main-nav {
   list-style: none;
@@ -74,6 +71,17 @@ body{
   /*border: 1px black solid;*/
 }
 
+/*NAVIGATION*/
+.navbar-toggle {
+    position: absolute;
+    top: 20px;
+    left: 40px;
+    cursor: pointer;
+    color: black;
+    font-size: 24px;
+    margin-top: 10px;
+}
+
 .link {
   display: block;
   padding: 0 0 9px;
@@ -89,7 +97,7 @@ body{
 }
 
 .link:after {
-    position: absolute;
+  position: absolute;
 	bottom: 0;
 	left: 0;
 	width: 100%;
@@ -124,10 +132,6 @@ li.active .link:after {
   width: 45%;
   /*border: 1px black solid;*/
 }
-
-/*.right-content>div{
-  border: 1px black solid;
-}*/
 
 .left-content>div>h1{
   padding: 0;
@@ -412,6 +416,52 @@ li.active .link:after {
 .footer>div>a:hover{
  color: white;
 }
+
+.topnav .icon {
+  display: none;
+}
+
+
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
 @media only screen and (max-width: 840px) {
   .left-content{
       text-align: center;
@@ -496,4 +546,31 @@ li.active .link:after {
       width:  100%;
       
   }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav li:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+    color: white;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: white;
+  }
+  .topnav.responsive li {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .link:after {
+   width: 50%;
+}
 }
