--- a/css/project.css
+++ b/css/project.css
@@ -1,16 +1,193 @@
-.process-image{
-	width:40em;
-	height: 24em;
+*{
+  box-sizing: border-box;
 }
-.posters{
-	width:20em;
-	height: 31em;
+body {
+  font-family: 'Arimo';
+  padding: 1rem;
+  font-size: 1rem;
+  background-color:#f9813a;
 }
+h1{
+	text-align: center;
+	color:#f9813a;
+}
+h1,h2,h3,h4{
+  font-family: 'Playfair Display';
+  
+}
+.pic-container{
+	width: 100%;
+	display:flex;
+	justify-content: space-between;
+}
+.pic-container>div{
+	width: 30%;
+}
+.pic-container>div>img{
+	width: 100%;
+}
+.background{
+	width: 100%;
+	display: flex;
+	margin-top: 1.5em;
+	justify-content: space-around;
+	flex-wrap: wrap;
+}
+.background>div:nth-of-type(1){
+	width: 40%;
+	padding: 1em;
+	background-color: white;
+	line-height: 1.5;
+	/*border: 3px dotted #f9813a;*/
+}
+.background>div:nth-of-type(2){
+	width: 40%;
+	/*border: 3px dotted #f9813a;*/
+}
+.background>div:nth-of-type(2)>div{
+	width: 100%;
+	padding: 1em;
+}
+/*
 .icon{
 	width: 10em;
 	height: 12em;
+}*/
+
+
+/*nav*/
+.topnav .icon {
+  display: none;
 }
 
+.main-nav {
+  list-style: none;
+  /*margin: 100px 0 0;*/
+  padding: 0;
+  overflow: hidden;
+  text-align: center;
+  /*border: 1px black solid;*/
+}
+
+.main-nav>li {
+  display: inline-block;
+  text-align: center;
+  overflow: hidden;
+  margin: 0 25px;
+  padding: 0;
+  /*border: 1px black solid;*/
+}
+
+/*NAVIGATION*/
+.navbar-toggle {
+    position: absolute;
+    top: 20px;
+    left: 40px;
+    cursor: pointer;
+    color: black;
+    font-size: 24px;
+    margin-top: 10px;
+}
+
+.link {
+  display: block;
+  padding: 0 0 9px;
+  text-decoration: none;
+  position: relative;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 1;
+  font-weight: 900;
+}
+
+.link:after {
+  position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 3px;
+	background: #fff;
+	content: '';
+	-webkit-transition: -webkit-transform 0.35s;
+	transition: transform 0.35s;
+	-webkit-transform: translate3d(-100%,0,0);
+	transform: translate3d(-100%,0,0);
+}
+
+.link:hover:after,
+li.active .link:after {
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+	background: #ffd5cd;
+}
+.topnav .icon {
+  display: none;
+}
+.container{
+  padding: 1em;
+  border-radius: 0.5em;
+  margin-bottom: 3rem;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+}
+
+/*process section*/
+.flex-container{
+	display: flex;
+	width: 100%;
+	flex-wrap: wrap;
+	margin:auto;
+	border: 3px solid black;
+	justify-content: center;
+
+}
+
+.flex-container>div:nth-of-type(1){
+	width: 70%;
+	border: 1px solid black;
+	display: flex;
+	justify-content: space-around;
+
+}
+
+.colors{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	border: 1px solid black;
+	width: 45%;
+}
+.flex-container>div:nth-of-type(1)>div:nth-of-type(2){
+	width: 45%;
+	border: 1px solid black;
+}
+
+.steps{
+	display: flex;
+	width: 100%;
+	justify-content: center;
+}
+.steps>div:nth-of-type(1){
+	width: 30%;
+}
+.steps>div:nth-of-type(1)>h3{
+	font-weight: 1200;
+	color:#f9813a;
+}
+.steps>div:nth-of-type(2){
+	width: 35%;
+}
+.process-image{
+	width: 100%;
+	border: 5px red black;
+}
+.researchImage{
+	width: 100%;
+	border: 1px red black;
+}
 @media only screen and (max-width: 900px) {
  .process-image{
 	width:22em;
@@ -19,3 +196,61 @@
 p{
 	text-align: left;
  }}
+
+@media screen and (max-width: 600px) {
+  .topnav li:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+    color: white;file:///E:/%E5%AD%A6%E6%A0%A1/IAT339/P03-PortfolioProject/project2.html
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: white;
+  }
+  .topnav.responsive li {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .link:after {
+   width: 50%;
+}
+}
+
+@media only screen and (max-width: 840px){
+	.pic-container{
+		flex-direction: column;
+		
+
+	}
+
+	.pic-container>div{
+	width: 80%;
+	align-self: center;
+	}
+	.background{
+		flex-direction: column;
+		margin-top: 0;
+	}
+.background>div:nth-of-type(1){
+	width: 100%;
+	padding: 0.5em;
+	/*border: 3px dotted #f9813a;*/
+}
+.background>div:nth-of-type(2){
+	width: 100%;
+	margin-top: 0;
+	/*border: 3px dotted #f9813a;*/
+}
+.background>div:nth-of-type(2)>div{
+	width: 100%;
+	padding: 0.5em;
+}
+}
