--- a/Style_Guide_Template/css/main.css
+++ b/Style_Guide_Template/css/main.css
@@ -220,34 +220,85 @@ input[type=text]:focus{
 /* 
   COMBINED ELEMENTS -------------------
 */
-/*.main-nav{
-  list-style-type: none;
-  margin: 0;
+/*nav*/
+.topnav .icon {
+  display: none;
+}
+
+.logo{
+  text-decoration: none;
+  color: white;
+  font-style: bold;
+  font-weight: 700;
+  display: none;
+}
+
+.main-nav {
+  list-style: none;
+  /*margin: 100px 0 0;*/
   padding: 0;
   overflow: hidden;
-  background-color: #333;
-  margin-bottom: 1rem;
-}
-.main-nav>li{
-  float: left;
-}*/
-/*li a {
-  display: block;
-  color: white;
   text-align: center;
-  padding: 14px 16px;
+  /*border: 1px black solid;*/
+}
+
+.main-nav>li {
+  display: inline-block;
+  text-align: center;
+  overflow: hidden;
+  margin: 0 25px;
+  padding: 0;
+  /*border: 1px black solid;*/
+}
+
+/*NAVIGATION*/
+.navbar-toggle {
+    position: absolute;
+    top: 20px;
+    left: 40px;
+    cursor: pointer;
+    color: black;
+    font-size: 24px;
+    margin-top: 10px;
+}
+
+.link {
+  display: block;
+  padding: 0 0 9px;
   text-decoration: none;
+  position: relative;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 1;
+  font-weight: 900;
 }
 
-li a:hover:not(.active) {
-  background-color: #111;
+.link:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #fff;
+  content: '';
+  -webkit-transition: -webkit-transform 0.35s;
+  transition: transform 0.35s;
+  -webkit-transform: translate3d(-100%,0,0);
+  transform: translate3d(-100%,0,0);
 }
-*/
-/*.active {
-  background-color: #ffd5cd;
-  color:#f9813a;
-}*/
 
+.link:hover:after,
+li.active .link:after {
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+  background: #ffd5cd;
+}
+.topnav .icon {
+  display: none;
+}
 .color{
   text-align: center;
 }
@@ -268,7 +319,23 @@ li a:hover:not(.active) {
   background-color:#fcf1f1;
   color: black;
 }
+.footer{
+  background-color:#ffd5cd;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.footer>div{
+  width: 33%;
+  text-align: center;
+}
 
+.footer>div>a{
+ color: #f9813a;
+}
+.footer>div>a:hover{
+ color: white;
+}
 /*responsive*/
 @media only screen and (max-width: 900px) {
  .container{
@@ -306,25 +373,40 @@ input[type=text]:focus{
 }
 }
 
-@media(max-width:768px){
-  nav{
-    position:relative;
-    width:50px;
-  }
-  .fa-bars{
-    cursor:pointer;
-    text-align:center;
-    display:block;
-  }
-  .main-nav{
-    position:absolute;
-    display:none;
-    text-align:left;
-    width:200px;
-    background:black;
-  }
-  .main-nav.show{
-    display:block;
-  }
 
+@media screen and (max-width: 700px) {
+  .topnav li:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+    color: white;
+  }
+  .logo{
+    float: right;
+    display: block;
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: white;
+  }
+  .logo{
+    right:30px;
+    top: 10;
+    width: 30%;
+  }
+  .topnav.responsive li {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .link:after {
+   width: 50%;
+}
 }
