--- a/Style_Guide_Template/css/main.css
+++ b/Style_Guide_Template/css/main.css
@@ -26,7 +26,9 @@ h3{
 h4{
   font-size: 1.1rem;
 }
-
+.reference{
+  text-align: center;
+}
 /*section:not([id]) {
   margin: 1em 0;
   padding: 0.5em 0;
