--- a/css/project.css
+++ b/css/project.css
@@ -1,397 +1,1 @@
-*{
-  box-sizing: border-box;
-}
-body {
-  font-family: 'Arimo';
-  padding: 2rem;
-  font-size: 1rem;
-  background-color:#f9813a;
-}
-.title{
-  color: white;
-  text-align: center;
-  font-size: 2.8em;
-  font-family: 'Playfair Display';
-}
-h1{
-	text-align: center;
-	color:#f9813a;
-}
-h1,h2,h3,h4{
-  font-family: 'Playfair Display';
-  
-}
-p{
-	font-size: 17px;
-}
-.pic-container{
-	width: 100%;
-	display:flex;
-	justify-content: space-between;
-}
-.pic-container>div{
-	width: 30%;
-}
-.pic-container>div>img{
-	width: 100%;
-}
-.background{
-	width: 100%;
-	display: flex;
-	margin-top: 1.5em;
-	justify-content: space-around;
-	flex-wrap: wrap;
-}
-.background>div:nth-of-type(1){
-	width: 40%;
-	padding: 1em;
-	background-color: white;
-	line-height: 1.5;
-	/*border: 3px dotted #f9813a;*/
-}
-.background>div:nth-of-type(2){
-	width: 40%;
-	/*border: 3px dotted #f9813a;*/
-}
-.background>div:nth-of-type(2)>div{
-	width: 100%;
-	padding: 1em;
-}
-/*
-.icon{
-	width: 10em;
-	height: 12em;
-}*/
-
-
-/*nav*/
-.topnav .icon {
-  display: none;
-}
-
-.logo{
-	text-decoration: none;
-	color: white;
-	font-style: bold;
-	font-weight: 700;
-	display: none;
-}
-
-.main-nav {
-  list-style: none;
-  /*margin: 100px 0 0;*/
-  padding: 0;
-  overflow: hidden;
-  text-align: center;
-  /*border: 1px black solid;*/
-}
-
-.main-nav>li {
-  display: inline-block;
-  text-align: center;
-  overflow: hidden;
-  margin: 0 25px;
-  padding: 0;
-  /*border: 1px black solid;*/
-}
-
-/*NAVIGATION*/
-.navbar-toggle {
-    position: absolute;
-    top: 20px;
-    left: 40px;
-    cursor: pointer;
-    color: black;
-    font-size: 24px;
-    margin-top: 10px;
-}
-
-.link {
-  display: block;
-  padding: 0 0 9px;
-  text-decoration: none;
-  position: relative;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-family: sans-serif;
-  font-size: 16px;
-  line-height: 1;
-  font-weight: 900;
-}
-
-.link:after {
-  position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 3px;
-	background: #fff;
-	content: '';
-	-webkit-transition: -webkit-transform 0.35s;
-	transition: transform 0.35s;
-	-webkit-transform: translate3d(-100%,0,0);
-	transform: translate3d(-100%,0,0);
-}
-
-.link:hover:after,
-li.active .link:after {
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
-	background: #ffd5cd;
-}
-.topnav .icon {
-  display: none;
-}
-.container{
-  padding: 1em;
-  border-radius: 0.5em;
-  margin-bottom: 3rem;
-  background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
-}
-
-/*process section*/
-.flex-container{
-	display: flex;
-	width: 100%;
-	flex-wrap: wrap;
-	margin:auto;
-	justify-content: center;
-	margin-top: 2em;
-
-}
-
-.flex-container>div:nth-of-type(1){
-	width: 70%;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-
-}
-
-.colors{
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	width: 45%;
-}
-.flex-container>div:nth-of-type(1)>div:nth-of-type(2){
-	width: 45%;
-}
-
-.steps{
-	display: flex;
-	width: 100%;
-	justify-content: space-around;
-	border-bottom: 2px dotted black;
-}
-.steps>div:nth-of-type(1){
-	width: 20%;
-}
-.steps>div:nth-of-type(1)>h2{
-	font-weight: 1200;
-	color:#f9813a;
-}
-.steps>div:nth-of-type(2){
-	width: 50%;
-}
-.process-image{
-	width: 100%;
-}
-.researchImage{
-	width: 100%;
-}
-
-.flex-container2{
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	margin-top: 2em;
-}
-.flex-container2>div:nth-of-type(1){
-	width:70%;
-	display: flex;
-	justify-content: space-around;
-}
-.flex-container2>div:nth-of-type(1)>div{
-	width:35%;
-}
-.flex-container2>div:nth-of-type(1)>div>img{
-	width:100%;
-}
-.phonePoster{
-	height: 100%;
-	width: 200%;
-}
-
-.reflection-container{
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-}
-.reflection-container>div:nth-of-type(1){
-	width: 20%;
-	
-	text-align: left;
-}
-.reflection-container>div:nth-of-type(1)>h2{
-	margin-left: 0.5em;
-	text-align: left;
-	color: #f9813a;
-}
-.reflection-container>div:nth-of-type(2){
-	width: 70%;
-}
-.footer{
-  background-color:#ffd5cd;
-  display: flex;
-  width: 100%;
-  justify-content: center;
-}
-.footer>div{
-  width: 33%;
-  text-align: center;
-}
-
-.footer>div>a{
- color: #f9813a;
-}
-.footer>div>a:hover{
- color: white;
-}
-/*@media only screen and (max-width: 900px) {
- .process-image{
-	width:22em;
-	height: 14em;
-}
-p{
-	text-align: left;
- }}*/
-
-@media screen and (max-width: 700px) {
-  .topnav li:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-    color: white;
-  }
-  .logo{
-  	float: right;
-  	display: block;
-  	font-size: 15px;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-    color: white;
-  }
-  .logo{
-  	right:30px;
-  	top: 10;
-  	width: 30%;
-  }
-  .topnav.responsive li{
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .link:after {
-   width: 50%;
-}
-}
-
-@media only screen and (max-width: 840px){
-	.pic-container{
-		flex-direction: column;
-	}
-
-	.pic-container>div{
-	width: 80%;
-	align-self: center;
-	}
-	.background{
-		flex-direction: column;
-		margin-top: 0;
-	}
-.background>div:nth-of-type(1){
-	width: 100%;
-	padding: 0.5em;
-	/*border: 3px dotted #f9813a;*/
-}
-.background>div:nth-of-type(2){
-	width: 100%;
-	margin-top: 0;
-	/*border: 3px dotted #f9813a;*/
-}
-.background>div:nth-of-type(2)>div{
-	width: 100%;
-	padding: 0.5em;
-}
-.flex-container2{
-	justify-content: center;
-}
-.flex-container2>div:nth-of-type(1){
-	width: 80%;
-	flex-wrap: wrap;
-	flex-direction: column;
-	/*border: 1px solid black*/
-
-}
-.flex-container2>div:nth-of-type(1)>div{
-	width: 100%;
-	justify-content: center;
-	margin-top: 1em;
-}
-.steps>div:nth-of-type(1){
-	width: 40%;
-	height: 40%;
-	align-self: center;
-}
-.steps>div:nth-of-type(1)>h2{
-	margin-top:3em;
-}
-.flex-container{
-	flex-direction: column;
-}
-
-.flex-container>div:nth-of-type(1){
-	width: 100%;
-	align-self: center;
-}
-
-.colors{
-	width: 100%;
-}
-.colors>div>img{
-	width: 100%;
-}
-.flex-container>div:nth-of-type(1)>div:nth-of-type(2){
-	width: 100%;
-}
-
-.reflection-container{
-	flex-direction: column;
-	justify-content: center;
-}
-.reflection-container>div:nth-of-type(1){
-	width:100%;
-
-	text-align: center;
-}
-.reflection-container>div:nth-of-type(1)>h2{
-	margin-left: 0;
-	text-align: center;
-	margin: auto;
-	color: #f9813a;
-}
-.reflection-container>div:nth-of-type(2){
-	width: 100%;
-	padding: 0.5em;
-}
-}
+*{box-sizing: border-box;}body {font-family: 'Arimo';padding: 2rem;font-size: 1rem;background-color:#f9813a;}.title{color: white;text-align: center;font-size: 2.8em;font-family: 'Playfair Display';}h1{text-align: center;color:#f9813a;}h1,h2,h3,h4{font-family: 'Playfair Display';}p{font-size: 17px;}.pic-container{width: 100%;display:flex;justify-content: space-between;}.pic-container>div{width: 30%;}.pic-container>div>img{width: 100%;}.background{width: 100%;display: flex;margin-top: 1.5em;justify-content: space-around;flex-wrap: wrap;}.background>div:nth-of-type(1){width: 40%;padding: 1em;background-color: white;line-height: 1.5;}.background>div:nth-of-type(2){width: 40%;}.background>div:nth-of-type(2)>div{width: 100%;padding: 1em;}.topnav .icon {display: none;}.logo{text-decoration: none;color: white;font-style: bold;font-weight: 700;display: none;}.main-nav {list-style: none;padding: 0;overflow: hidden;text-align: center;}.main-nav>li {display: inline-block;text-align: center;overflow: hidden;margin: 0 25px;padding: 0;}.navbar-toggle {position: absolute;top: 20px;left: 40px;cursor: pointer;color: black;font-size: 24px;margin-top: 10px;}.link {display: block;padding: 0 0 9px;text-decoration: none;position: relative;color: #fff;text-transform: uppercase;letter-spacing: 2px;font-family: sans-serif;font-size: 16px;line-height: 1;font-weight: 900;}.link:after {position: absolute;bottom: 0;left: 0;width: 100%;height: 3px;background: #fff;content: '';-webkit-transition: -webkit-transform 0.35s;transition: transform 0.35s;-webkit-transform: translate3d(-100%,0,0);transform: translate3d(-100%,0,0);}.link:hover:after, li.active .link:after {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);background: #ffd5cd;}.topnav .icon {display: none;}.container{padding: 1em;border-radius: 0.5em;margin-bottom: 3rem;background-color: white;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);}.flex-container{display: flex;width: 100%;flex-wrap: wrap;margin:auto;justify-content: center;margin-top: 2em;}.flex-container>div:nth-of-type(1){width: 70%;display: flex;flex-wrap: wrap;justify-content: space-around;}.colors{display: flex;flex-direction: column;justify-content: space-between;width: 45%;}.flex-container>div:nth-of-type(1)>div:nth-of-type(2){width: 45%;}.steps{display: flex;width: 100%;justify-content: space-around;border-bottom: 2px dotted black;}.steps>div:nth-of-type(1){width: 20%;}.steps>div:nth-of-type(1)>h2{font-weight: 1200;color:#f9813a;}.steps>div:nth-of-type(2){width: 50%;}.process-image{width: 100%;}.researchImage{width: 100%;}.flex-container2{width: 100%;display: flex;justify-content: center;margin-top: 2em;}.flex-container2>div:nth-of-type(1){width:70%;display: flex;justify-content: space-around;}.flex-container2>div:nth-of-type(1)>div{width:35%;}.flex-container2>div:nth-of-type(1)>div>img{width:100%;}.phonePoster{height: 100%;width: 200%;}.reflection-container{width: 100%;display: flex;flex-wrap: wrap;}.reflection-container>div:nth-of-type(1){width: 20%;text-align: left;}.reflection-container>div:nth-of-type(1)>h2{margin-left: 0.5em;text-align: left;color: #f9813a;}.reflection-container>div:nth-of-type(2){width: 70%;}.footer{background-color:#ffd5cd;display: flex;width: 100%;justify-content: center;}.footer>div{width: 33%;text-align: center;}.footer>div>a{color: #f9813a;}.footer>div>a:hover{color: white;}@media screen and (max-width: 700px) {.topnav li:not(:first-child) {display: none;}.topnav a.icon {float: right;display: block;color: white;}.logo{float: right;display: block;font-size: 15px;}}@media screen and (max-width: 700px) {.topnav.responsive {position: relative;}.topnav.responsive .icon {position: absolute;right: 0;top: 0;color: white;}.logo{right:30px;top: 10;width: 30%;}.topnav.responsive li{float: none;display: block;text-align: left;}.link:after {width: 50%;}}@media only screen and (max-width: 840px){.pic-container{flex-direction: column;}.pic-container>div{width: 80%;align-self: center;}.background{flex-direction: column;margin-top: 0;}.background>div:nth-of-type(1){width: 100%;padding: 0.5em;}.background>div:nth-of-type(2){width: 100%;margin-top: 0;}.background>div:nth-of-type(2)>div{width: 100%;padding: 0.5em;}.flex-container2{justify-content: center;}.flex-container2>div:nth-of-type(1){width: 80%;flex-wrap: wrap;flex-direction: column;}.flex-container2>div:nth-of-type(1)>div{width: 100%;justify-content: center;margin-top: 1em;}.steps>div:nth-of-type(1){width: 40%;height: 40%;align-self: center;}.steps>div:nth-of-type(1)>h2{margin-top:3em;}.flex-container{flex-direction: column;}.flex-container>div:nth-of-type(1){width: 100%;align-self: center;}.colors{width: 100%;}.colors>div>img{width: 100%;}.flex-container>div:nth-of-type(1)>div:nth-of-type(2){width: 100%;}.reflection-container{flex-direction: column;justify-content: center;}.reflection-container>div:nth-of-type(1){width:100%;text-align: center;}.reflection-container>div:nth-of-type(1)>h2{margin-left: 0;text-align: center;margin: auto;color: #f9813a;}.reflection-container>div:nth-of-type(2){width: 100%;padding: 0.5em;}}
