--- a/css/home.css
+++ b/css/home.css
@@ -1,553 +1,1 @@
-*{
-	box-sizing: border-box;
-}
-
-html {
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-      margin:0;
-    padding:0;  
-}
-h1,h2,h3,h4{
-  font-family: 'Playfair Display';
-  
-}
-body{
-  font-family: 'Arimo';  
-  background-color:#f9813a;
-  padding: 0;
-}
-
-.flex-intro{
-	display: flex;
-	flex-wrap: wrap;
-}
-.flex-intro>div{
-	width: 50%;
-	margin: 0;
-}
-.flex-intro>div:nth-child(2){
-	
-	text-align: right;
-	margin: 0,0;
-}
-
-.flex-intro>div:nth-child(1){
-	/*height: 17vw;*/
-	padding: none;
-}
-
-body{
-	padding: 0;
-}
-
-.text-container{
-	width: 40%;
-	color: #f9813a;
-	float: right;
-	position: absolute;
-	right: 5%;
-	background-color: white;
-	border-radius: 2em;
-	padding: 0.9em;
-}
-
-
-.main-nav {
-  list-style: none;
-  /*margin: 100px 0 0;*/
-  padding: 0;
-  overflow: hidden;
-  text-align: center;
-  /*border: 1px black solid;*/
-}
-
-.main-nav>li {
-  display: inline-block;
-  text-align: center;
-  overflow: hidden;
-  margin: 0 25px;
-  padding: 0;
-  /*border: 1px black solid;*/
-}
-
-/*NAVIGATION*/
-.navbar-toggle {
-    position: absolute;
-    top: 20px;
-    left: 40px;
-    cursor: pointer;
-    color: black;
-    font-size: 24px;
-    margin-top: 10px;
-}
-
-.link {
-  display: block;
-  padding: 0 0 9px;
-  text-decoration: none;
-  position: relative;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-family: sans-serif;
-  font-size: 16px;
-  line-height: 1;
-  font-weight: 900;
-}
-
-.link:after {
-  position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 3px;
-	background: #fff;
-	content: '';
-	-webkit-transition: -webkit-transform 0.35s;
-	transition: transform 0.35s;
-	-webkit-transform: translate3d(-100%,0,0);
-	transform: translate3d(-100%,0,0);
-}
-
-.link:hover:after,
-li.active .link:after {
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
-	background: #ffd5cd;
-}
-
-.flex-title{
-  display: flex;
-  justify-content: center;
-  /*flex-wrap: wrap;*/
-  /*border: 1px solid black;*/
-}
-
-.right-content{
-  text-align: left;
-  margin-left: 1em;
-  width: 45%;
-  font-size: 3.5em;
-  color: white;
-  text-align: justify;
-  align-self: center;
-  font-family: 'Playfair Display';
-}
-
-.left-content{
-  text-align: right;
-  width: 45%;
-  /*border: 1px black solid;*/
-}
-
-.left-content>div>h1{
-  padding: 0;
-  font-weight: 800;
-  font-size: 4em;
-  font-family: 'Playfair Display';
-  color: #1a1c20;
-}
-
-
-
-
-.intro{
-	width: 100%;
-	padding: 0;
-  margin-right: 0;
-  /*border: 1px black solid;*/
-  /*font-size: 4em;*/
-}
-.intro>h1{
-	margin: 0;
-}
-/*buttons*/
-.btn {
-    border: none;
-    color: white;
-    padding: 10px 57px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 4px;
-}
-.btn-1{
-  
-  background-color:#f9813a;
-  color: white;
-}
-.btn-2{
-  background-color: #1a1c20;
-  color: white;
-}
-.btn-2:hover,
-.btn-2:focus {
-    background-color: white;
-    border: 1px solid black;
-    color: black;
-    transition: 0.3s;
-}
-.btn-1:hover,
-.btn-1:focus {
-    background-color: white;
-    border: 1px solid #f9813a;
-    color: #f9813a;
-    transition: 0.3s;
-}
-
-.scroll-button {
-  width: 40px;
-  height: 40px;
-  background-color: #ffd5cd;
-  border-radius: 22.5px;
-  margin-top: 1em;
-  font-size: 30px;
-  line-height: 47px;
-  color: #fff;
- }
-.banner-bridge-center{
-  width: 50%;
-  text-align: center;
-  margin:auto;
-}
-.scroll-button:hover {
-  background-color: #1a1c20;
-  transition: 0.5s;
- }
-
-.section2{
-  background-color: white;
-  max-width: 95vw;
-  min-height: 1000px;
-
-  /*min-height: 100vh;*/
-  margin-top: 3em;
-  margin: auto;
-  clear: both;
-}
-
-
-.section1{
-  /*border: 1px solid black;*/
-  /*background-color: white;*/
-  width: 90vw;
-  min-height: 85vh;
-  padding: 0;
-  margin:auto;
-  margin-top: 1em;
-
-}
-
-.txt{
-  font-weight: 1000;
-  font-size: 40px;
-  color: #f9813a;
-  text-align: right;
-}
-.titleFont{
-  margin-left: 2em;
-}
-
-.flex-about{
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.flex-about>div:nth-of-type(1){
-  width: 30%;
-  height: 80%;
-  margin-top: 2em;
-  /*border: 1px solid black;*/
-  padding: 1em;
-  /* border-radius: 0.5em;
-  margin-bottom: 3rem;
-  background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);*/
-}
-.flex-about>div:nth-of-type(1)>p{
-  line-height: 1.5;
-  color: #1a1c20;
-  margin-top: 3em;
-}
-.flex-about>div:nth-of-type(2){
-  width: 50%;
-  margin-left: 2em;
-  margin-top: 2em;
-  color: white;
-  height:80%;
-  border-radius: 0.5em;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
-  background-color: #1a1c20;
-  /*border-radius: 0.5em;*/
-  padding: 1em;
- /* margin-bottom: 3rem;
-  background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);*/
-}
-.flex-skills{
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.flex-skills>h2{
-  width: 100%;
-  text-align: center;
-  color: #f9813a;
-}
-.flex-skills>div{
-  width: 50%;
-  margin-bottom: 2em;
-}
-.flex-skills>div>h3{
-  color: #f9813a;
-  text-align: center;
-  margin: auto;
-  width: 80%;
-}
-.flex-skills>div>ul{
-  list-style-type: none;
-  padding: 0;
-}
-.flex-skills>div>ul,li{
-  text-align: center;
-}
-.myWork{
-  text-align: center;
-  margin-top: 3em;
-  color: #f9813a;
-}
-.flex-image{
-  display: flex;
-  width: 100%;
-  justify-content: space-around;
-}
-.flex-image>div{
-  flex-direction: column;
-  width: 44%;
-}
-.flex-image>div>div:nth-of-type(2){
-  flex-direction: column;
-  width: 60%;
-  text-align: center;
-  margin: auto;
-  margin-top: 1.5em;
-}
-.display{
-  background-color:#ffd5cd;
-  width: 100%;
-  text-align: center;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
-}
-.posterImages,.webImage{
-  max-width:100%;
-  max-height: 320px;
-}
-
-.flex-contact{
-  background-color:#f9813a; 
-  margin-top: 3em;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  width: 100%;
-}
-
-.flex-contact>h1{
-  width: 100%;
-  text-align: center;
-  color:white;
-  padding: 1em;
-}
-
-.flex-contact>div{
-  width: 40%;
-  font-size: 20px;
-  font-weight: 600;
-  color: white;
-  font-family: 'Arimo';
-  text-align: center;
-  margin-bottom: 2em;
-}
-
-
-.fa {
-  padding: 10px;
-  font-size: 30px;
-/*  width: 30px;
-  height: 30px;*/
-/*  text-align: center;*/
-  text-decoration: none;
-/*  margin: 5px 2px;*/
-  border-radius: 50%;
-}
-
-.fa:hover {
-    opacity: 0.7;
-}
-
-.fa-instagram {
-  background: #125688;
-  color: white;
-}
-
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
-}
-
-.fa-google {
-  background: #dd4b39;
-  color: white;
-}
-
-.footer{
-  background-color:#ffd5cd;
-  display: flex;
-  width: 100%;
-  justify-content: center;
-}
-.footer>div{
-  width: 100%;
-}
-
-.footer>div>a{
- color: #f9813a;
-}
-.footer>div>a:hover{
- color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-@media only screen and (max-width: 840px) {
-    
-  .left-content{
-      text-align: center;
-      width: 100%;
-      font-size: 15px;
-      line-height: 1;
-      margin: auto;
-      justify-content: center;
-      /*border: 1px solid black;*/
-  }
-
-  .flex-title{
-    flex-direction: column;
-    justify-content: center;
-  }
-  .right-content{
-    display: flex;
-    width: 80%;
-    /*border: 1px solid black;*/
-    font-size: 20px;
-    line-height: 2;
-    text-align: center;
-    justify-content: center;
-    margin-left: 0;
-  }
-  .right-content>div:nth-of-type(1){
-      width: 20%;
-      /*border: 1px solid black;*/
-  }
-  .right-content>div:nth-of-type(2){
-      width: 40%;
-      font-size: 1.6rem;
-  }
-/*  .scroll-button{
-      top: 80%;
-  }
-*/
-  .flex-about>div:nth-of-type(1){
-    width: 90%;
-  }
-  .flex-about>div:nth-of-type(2){
-    width: 90%;
-    margin-left: 0;
-    margin-bottom: 1em;
-  }
-  .flex-skills{
-  }
-
-  .flex-image{
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-  .flex-image>div{
-    width: 100%;
-    margin-top: 2em;
-}
-}
-
-
-@media only screen and (max-width: 540px) {
-  .left-content{
-      text-align: center;
-      width: 100%;
-      font-size: 12px;
-      line-height: 1;
-     
-  }
-  .flex-title{
-    flex-direction: column;
-  }
-
-  .right-content{
-    display: flex;
-    width: 100%; 
-    font-size: 20px;
-    line-height: 2;
-    flex-direction: column;
-
-    text-align: center;
-    justify-content: center;
-  }
-  .right-content>div:nth-of-type(1){
-      width: 20%;
-      align-self: center;
-  }
-    .right-content>div:nth-of-type(2){
-      width:  100%;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav li:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-    color: white;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-    color: white;
-  }
-  .topnav.responsive li {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .link:after {
-   width: 50%;
-}
-}
-
-@media screen and (max-width: 940px) {
-.right-content>div:nth-of-type(2)>h1{
-      font-size: 1em;
-  }
-.left-content{
-  width: 50%;
-}
-
-}
+*{box-sizing: border-box;}html {box-sizing: border-box;scroll-behavior: smooth;margin:0;padding:0;}h1,h2,h3,h4{font-family: 'Playfair Display';}body{font-family: 'Arimo';background-color:#f9813a;padding: 0;}.flex-intro{display: flex;flex-wrap: wrap;}.flex-intro>div{width: 50%;margin: 0;}.flex-intro>div:nth-child(2){text-align: right;margin: 0,0;}.flex-intro>div:nth-child(1){padding: none;}body{padding: 0;}.text-container{width: 40%;color: #f9813a;float: right;position: absolute;right: 5%;background-color: white;border-radius: 2em;padding: 0.9em;}.main-nav {list-style: none;padding: 0;overflow: hidden;text-align: center;}.main-nav>li {display: inline-block;text-align: center;overflow: hidden;margin: 0 25px;padding: 0;}.navbar-toggle {position: absolute;top: 20px;left: 40px;cursor: pointer;color: black;font-size: 24px;margin-top: 10px;}.link {display: block;padding: 0 0 9px;text-decoration: none;position: relative;color: #fff;text-transform: uppercase;letter-spacing: 2px;font-family: sans-serif;font-size: 16px;line-height: 1;font-weight: 900;}.link:after {position: absolute;bottom: 0;left: 0;width: 100%;height: 3px;background: #fff;content: '';-webkit-transition: -webkit-transform 0.35s;transition: transform 0.35s;-webkit-transform: translate3d(-100%,0,0);transform: translate3d(-100%,0,0);}.link:hover:after, li.active .link:after {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);background: #ffd5cd;}.flex-title{display: flex;justify-content: center;}.right-content{text-align: left;margin-left: 1em;width: 45%;font-size: 3.5em;color: white;text-align: justify;align-self: center;font-family: 'Playfair Display';}.left-content{text-align: right;width: 45%;}.left-content>div>h1{padding: 0;font-weight: 800;font-size: 4em;font-family: 'Playfair Display';color: #1a1c20;}.intro{width: 100%;padding: 0;margin-right: 0;}.intro>h1{margin: 0;}.btn {border: none;color: white;padding: 10px 57px;text-align: center;text-decoration: none;border-radius: 4px;}.btn-1{background-color:#f9813a;color: white;}.btn-2{background-color: #1a1c20;color: white;}.btn-2:hover, .btn-2:focus {background-color: white;border: 1px solid black;color: black;transition: 0.3s;}.btn-1:hover, .btn-1:focus {background-color: white;border: 1px solid #f9813a;color: #f9813a;transition: 0.3s;}.scroll-button {width: 40px;height: 40px;background-color: #ffd5cd;border-radius: 22.5px;margin-top: 1em;font-size: 30px;line-height: 47px;color: #fff;}.banner-bridge-center{width: 50%;text-align: center;margin:auto;}.scroll-button:hover {background-color: #1a1c20;transition: 0.5s;}.section2{background-color: white;max-width: 95vw;min-height: 1000px;margin-top: 3em;margin: auto;clear: both;}.section1{width: 90vw;min-height: 85vh;padding: 0;margin:auto;margin-top: 1em;}.txt{font-weight: 1000;font-size: 40px;color: #f9813a;text-align: right;}.titleFont{margin-left: 2em;}.flex-about{width: 100%;display: flex;flex-wrap: wrap;justify-content: center;}.flex-about>div:nth-of-type(1){width: 30%;height: 80%;margin-top: 2em;padding: 1em;}.flex-about>div:nth-of-type(1)>p{line-height: 1.5;color: #1a1c20;margin-top: 3em;}.flex-about>div:nth-of-type(2){width: 50%;margin-left: 2em;margin-top: 2em;color: white;height:80%;border-radius: 0.5em;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);background-color: #1a1c20;padding: 1em;}.flex-skills{width: 100%;display: flex;flex-wrap: wrap;justify-content: center;}.flex-skills>h2{width: 100%;text-align: center;color: #f9813a;}.flex-skills>div{width: 50%;margin-bottom: 2em;}.flex-skills>div>h3{color: #f9813a;text-align: center;margin: auto;width: 80%;}.flex-skills>div>ul{list-style-type: none;padding: 0;}.flex-skills>div>ul,li{text-align: center;}.myWork{text-align: center;margin-top: 3em;color: #f9813a;}.flex-image{display: flex;width: 100%;justify-content: space-around;}.flex-image>div{flex-direction: column;width: 44%;}.flex-image>div>div:nth-of-type(2){flex-direction: column;width: 60%;text-align: center;margin: auto;margin-top: 1.5em;}.display{background-color:#ffd5cd;width: 100%;text-align: center;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);}.posterImages,.webImage{max-width:100%;max-height: 320px;}.flex-contact{background-color:#f9813a;margin-top: 3em;display: flex;flex-wrap: wrap;justify-content: space-around;width: 100%;}.flex-contact>h1{width: 100%;text-align: center;color:white;padding: 1em;}.flex-contact>div{width: 40%;font-size: 20px;font-weight: 600;color: white;font-family: 'Arimo';text-align: center;margin-bottom: 2em;}.fa {padding: 10px;font-size: 30px;text-decoration: none;border-radius: 50%;}.fa:hover {opacity: 0.7;}.fa-instagram {background: #125688;color: white;}.fa-twitter {background: #55ACEE;color: white;}.fa-google {background: #dd4b39;color: white;}.footer{background-color:#ffd5cd;display: flex;width: 100%;justify-content: center;}.footer>div{width: 100%;}.footer>div>a{color: #f9813a;}.footer>div>a:hover{color: white;}.topnav .icon {display: none;}@media only screen and (max-width: 840px) {.left-content{text-align: center;width: 100%;font-size: 15px;line-height: 1;margin: auto;justify-content: center;}.flex-title{flex-direction: column;justify-content: center;}.right-content{display: flex;width: 80%;font-size: 20px;line-height: 2;text-align: center;justify-content: center;margin-left: 0;}.right-content>div:nth-of-type(1){width: 20%;}.right-content>div:nth-of-type(2){width: 40%;font-size: 1.6rem;}.flex-about>div:nth-of-type(1){width: 90%;}.flex-about>div:nth-of-type(2){width: 90%;margin-left: 0;margin-bottom: 1em;}.flex-skills{}.flex-image{flex-direction: column;flex-wrap: wrap;}.flex-image>div{width: 100%;margin-top: 2em;}}@media only screen and (max-width: 540px) {.left-content{text-align: center;width: 100%;font-size: 12px;line-height: 1;}.flex-title{flex-direction: column;}.right-content{display: flex;width: 100%;font-size: 20px;line-height: 2;flex-direction: column;text-align: center;justify-content: center;}.right-content>div:nth-of-type(1){width: 20%;align-self: center;}.right-content>div:nth-of-type(2){width: 100%;}}@media screen and (max-width: 600px) {.topnav li:not(:first-child) {display: none;}.topnav a.icon {float: right;display: block;color: white;}}@media screen and (max-width: 600px) {.topnav.responsive {position: relative;}.topnav.responsive .icon {position: absolute;right: 0;top: 0;color: white;}.topnav.responsive li {float: none;display: block;text-align: left;}.link:after {width: 50%;}}@media screen and (max-width: 940px) {.right-content>div:nth-of-type(2)>h1{font-size: 1em;}.left-content{width: 50%;}}
