--- a/css/web.css
+++ b/css/web.css
@@ -1,138 +1,1 @@
-.iframe{
-	margin:auto;
-	width: 80%;
-}
-iframe{
-  width:100%;
-  height:450px;
-}
-.flex-web{
-	display: flex;
-	justify-content: center;
-}
-.in-text-link{
-  color: #f9813a;
-}
-.in-text-link:hover{
-  color: white;
-  background-color:#f9813a; 
-  text-decoration: none;
-}
-
-
-/*nav*/
-.topnav .icon {
-  display: none;
-}
-
-.logo{
-	text-decoration: none;
-	color: white;
-	font-style: bold;
-	font-weight: 700;
-	display: none;
-}
-
-.main-nav {
-  list-style: none;
-  /*margin: 100px 0 0;*/
-  padding: 0;
-  overflow: hidden;
-  text-align: center;
-  /*border: 1px black solid;*/
-}
-
-.main-nav>li {
-  display: inline-block;
-  text-align: center;
-  overflow: hidden;
-  margin: 0 25px;
-  padding: 0;
-  /*border: 1px black solid;*/
-}
-
-
-.container{
-  padding: 1em;
-  border-radius: 0.5em;
-  margin-bottom: 3rem;
-  background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
-}
-
-/*process section*/
-.flex-container{
-	display: flex;
-	width: 100%;
-	flex-wrap: wrap;
-	margin:auto;
-	justify-content: center;
-	margin-top: 2em;
-
-}
-
-.flex-container>div:nth-of-type(1){
-	width: 70%;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-
-}
-
-.flex-container>div:nth-of-type(1)>div:nth-of-type(2){
-	width: 45%;
-}
-
-
-
-@media only screen and (max-width: 900px) {
- .process-image{
-	width:22em;
-	height: 14em;
-}
-p{
-	text-align: left;
- }}
-
-@media screen and (max-width: 700px) {
-  .topnav li:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-    color: white;
-  }
-  .logo{
-  	float: right;
-  	display: block;
-  	font-size: 15px;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-    color: white;
-  }
-  .logo{
-  	right:30px;
-  	top: 10;
-  	width: 30%;
-  }
-  .topnav.responsive li {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .link:after {
-   width: 50%;
-}
-}
-
-@media only screen and (max-width: 840px){
-	.iframe{
-		width: 100%;
-	}
-}
+.iframe{margin:auto;width: 80%;}iframe{width:100%;height:450px;}.flex-web{display: flex;justify-content: center;}.in-text-link{color: #f9813a;}.in-text-link:hover{color: white;background-color:#f9813a;text-decoration: none;}.topnav .icon {display: none;}.logo{text-decoration: none;color: white;font-style: bold;font-weight: 700;display: none;}.main-nav {list-style: none;padding: 0;overflow: hidden;text-align: center;}.main-nav>li {display: inline-block;text-align: center;overflow: hidden;margin: 0 25px;padding: 0;}.container{padding: 1em;border-radius: 0.5em;margin-bottom: 3rem;background-color: white;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);}.flex-container{display: flex;width: 100%;flex-wrap: wrap;margin:auto;justify-content: center;margin-top: 2em;}.flex-container>div:nth-of-type(1){width: 70%;display: flex;flex-wrap: wrap;justify-content: space-around;}.flex-container>div:nth-of-type(1)>div:nth-of-type(2){width: 45%;}@media only screen and (max-width: 900px) {.process-image{width:22em;height: 14em;}p{text-align: left;}}@media screen and (max-width: 700px) {.topnav li:not(:first-child) {display: none;}.topnav a.icon {float: right;display: block;color: white;}.logo{float: right;display: block;font-size: 15px;}}@media screen and (max-width: 700px) {.topnav.responsive {position: relative;}.topnav.responsive .icon {position: absolute;right: 0;top: 0;color: white;}.logo{right:30px;top: 10;width: 30%;}.topnav.responsive li {float: none;display: block;text-align: left;}.link:after {width: 50%;}}@media only screen and (max-width: 840px){.iframe{width: 100%;}}
